...
    <string name="course_limit">The limit is 10 unfinished courses</string>
    <string name="course_color_unavailable">This color is occupied. Choose another color.</string>
    <string name="course_save_error">Could not save changes. Try again.</string>
    <string name="course_continue">Continue</string>
    <string name="course_name_too_long">Name must contain no more than 50 characters</string>
    <string name="course_enable_schedule">Enable schedule</string>
    <string name="course_disable_schedule">Switch to unscheduled</string>
    <string name="course_confirm_disable_schedule">Future sessions without a result and reminders will be removed. Past sessions, recorded results and topic progress will be kept.</string>
    <string name="course_all_topics_completed">All topics completed</string>
    <string name="course_finished_status">Completed course</string>
    <string name="course_paused_status">Paused</string>
    <string name="course_topics_progress">%1$d of %2$d topics</string>
    <string name="course_schedule_no_end">No end date</string>
...
